force-app/main/default/objects/Opportunity_Site__c/Opportunity_Site__c.object-meta.xml
<CustomObject>
    <description>This is a junction object to connect Sites and Opportunities</description>
    <label>Opportunity Site</label>
    <nameField>
        <displayFormat>OPPSTE - {0}</displayFormat>
        <label>Opportunity Site Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>