force-app/main/default/objects/Opportunity_Site__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>County field from the Site Object</description>
    <formula>Site__r.Mailing_Address_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County</label>
    <type>Text</type>
</CustomField>