force-app/main/default/objects/Opportunity_Site__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>Latitude field from Sites Object</description>
    <formula>Site__r.Latitude__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latitude</label>
    <type>Text</type>
</CustomField>