force-app/main/default/objects/Opportunity_Site__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>Longitude field from the Sites Object</description>
    <formula>Site__r.Longitude__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longitude</label>
    <type>Text</type>
</CustomField>