force-app/main/default/objects/Opportunity_Site__c/fields/Mailing_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Line_1__c</fullName>
    <description>Address Line 1 field from Site Object</description>
    <formula>Site__r.Mailing_Address_Line_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address Line 1</label>
    <type>Text</type>
</CustomField>