force-app/main/default/objects/Opportunity_Site__c/fields/Mailing_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Line_2__c</fullName>
    <description>Mailing Address Line 2 field from the Sites object</description>
    <formula>Site__r.Mailing_Address_Line_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address Line 2</label>
    <type>Text</type>
</CustomField>