force-app/main/default/objects/Opportunity_Site__c/fields/Mailing_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_State__c</fullName>
    <description>Mailing Address State from Site Object</description>
    <formula>Site__r.Mailing_Address_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address State</label>
    <type>Text</type>
</CustomField>