force-app/main/default/objects/Opportunity_Site__c/fields/Major_Activity__c.field-meta.xml
<CustomField>
    <fullName>Major_Activity__c</fullName>
    <description>Major Activity checkbox field from the Sites Object</description>
    <formula>Site__r.Major_Activity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Major Activity</label>
    <type>Checkbox</type>
</CustomField>