force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Building_Clear_Height_ft__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Building_Clear_Height_ft__c</fullName>
    <formula>Site__r.Building_Clear_Height_ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Clear Height (ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>