force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Building_Size_Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Building_Size_Square_Feet__c</fullName>
    <formula>Site__r.Building_Size_Square_Feet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Size (Square Feet)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>