force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Date_of_State_Lead__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Date_of_State_Lead__c</fullName>
    <formula>Site__r.NS_Date_of_State_Lead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of State Lead</label>
    <type>Date</type>
</CustomField>