force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Description__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Description__c</fullName>
    <formula>Site__r.NS_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>