force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Initial_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Initial_Contact_Date__c</fullName>
    <formula>Site__r.NS_Initial_Contact_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Contact Date</label>
    <type>Date</type>
</CustomField>