force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Lead_Source__c</fullName>
    <formula>TEXT(Site__r.NS_Lead_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>