force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Main_Contact__c</fullName>
    <formula>Site__r.Main_Contact__r.FirstName  &amp; &#39; &#39; &amp;  Site__r.Main_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Contact</label>
    <type>Text</type>
</CustomField>