force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Maximum_Investment__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Maximum_Investment__c</fullName>
    <formula>Site__r.Maximum_Investment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>