force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Minimum_Weekly_Rail_Volume__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Minimum_Weekly_Rail_Volume__c</fullName>
    <formula>Site__r.Minimum_Weekly_Rail_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Weekly Rail Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>