force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Physical_Plant_Location__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Physical_Plant_Location__c</fullName>
    <formula>Site__r.NS_Physical_Plant_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical Plant Location</label>
    <type>Text</type>
</CustomField>