force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Power_Requirement_MW__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Power_Requirement_MW__c</fullName>
    <formula>Site__r.Power_Requirement_MW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power Requirement (MW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>