force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Site_Class__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Site_Class__c</fullName>
    <formula>Site__r.NSSales_Site_Class__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Class</label>
    <type>Text</type>
</CustomField>