force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Site_Index_Number__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Site_Index_Number__c</fullName>
    <formula>Site__r.Site_Index_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Index Number</label>
    <type>Text</type>
</CustomField>