force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Site_Name__c</fullName>
    <formula>Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Name</label>
    <type>Text</type>
</CustomField>