force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Site_Owner__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Site_Owner__c</fullName>
    <formula>Site__r.Site_Owner__r.FirstName  &amp; &#39; &#39; &amp;  Site__r.Site_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Owner</label>
    <type>Text</type>
</CustomField>