force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Site_Selection_Company__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Site_Selection_Company__c</fullName>
    <formula>County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Selection Company</label>
    <type>Text</type>
</CustomField>