force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Site_Size_Acres__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Site_Size_Acres__c</fullName>
    <formula>Site__r.Site_Size_Acres__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Size (Acres)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>