force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Site_Type__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Site_Type__c</fullName>
    <formula>TEXT(Site__r.Site_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Type</label>
    <type>Text</type>
</CustomField>