force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Stage__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
                <default>true</default>
                <label>Working</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>