force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Tech_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Tech_Site_Name__c</fullName>
    <formula>Site__r.Mailing_Address_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Site Name</label>
    <type>Text</type>
</CustomField>