force-app/main/default/objects/Opportunity_Site__c/fields/NSSales_Technical_Name__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Technical_Name__c</fullName>
    <formula>Site__r.Technical_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technical Name</label>
    <type>Text</type>
</CustomField>